@@ -1,3 +1,7 @@
+2011-07-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-sum.el (gnus-summary-insert-new-articles): Clean up slightly.
+
 2011-07-29  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>
 
 	* mm-decode.el (mm-dissect-buffer): Add a default content-disposition
